--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-    font-family: sans-serif;
     margin: 0 50px;
     background-color: #e5e5e5;
     overflow: hidden;
@@ -7,16 +6,18 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    font-family: 'Kanit', sans-serif;
   }
   
   .app {
-    background-color: #fff;
+    background-color: #83f3ff;
     width: 300px;
     height: 500px;
     border: 5px solid #abcea1;
     border-radius: 8px;
     padding: 15px;
     overflow-y: scroll;
+    color: rgb(244, 56, 232);
   }
   
   .app::-webkit-scrollbar {
@@ -34,18 +35,18 @@ body {
   }
   
   .fa-plus {
-    background-color: #abcea1;
+    background-color: #3fe711;
     padding: 3px;
     border-radius: 3px;
   }
   
-  #musicas {
+  #veiculos {
     display: grid;
     grid-template-columns: 1fr;
     gap: 14px;
   }
   
-  #musicas div {
+  #veiculos div {
     border: 3px solid #abcea1;
     background-color: #e2eede;
     border-radius: 6px;
@@ -54,16 +55,20 @@ body {
     gap: 4px;
   }
   
-  #musicas div .options {
+  #veiculos div .options {
     justify-self: center;
     display: flex;
     gap: 20px;
   }
   
-  #musicas div .options i {
+  #veiculos div .options i {
     cursor: pointer;
   }
   
   #msg {
+    color: red;
+  }
+
+  #msg2 {
     color: red;
   }
