--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body {
   }
   
   .app {
-    background-color: #83f3ff;
+    background-color: #DFD7BF;
     width: 300px;
     height: 500px;
     border: 5px solid #abcea1;
     border-radius: 8px;
     padding: 15px;
     overflow-y: scroll;
-    color: rgb(244, 56, 232);
+    color: #FF8551;
   }
   
   .app::-webkit-scrollbar {
@@ -35,7 +35,7 @@ body {
   }
   
   .fa-plus {
-    background-color: #3fe711;
+    background-color: #4311e7;
     padding: 3px;
     border-radius: 3px;
   }
@@ -71,4 +71,4 @@ body {
 
   #msg2 {
     color: red;
-  }
+  } 
